fix scrubber sizing+alignment

--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ img {
 }
 
 .slidecontainer {
-    text-align: center;
+    width: 50%;
+    margin: auto;
 }
 
 .slider {
